# DAPRAN

./: CMakeLists.txt  Makefile  Makefile~  README.md  README.md~
Development_Files/: Main.c  Main.c~  Makefile  Makefile~  nidfft  scope_6q.csv
bugs/: bugs.org  bugs.org~
examples/: Hann  Makefile  cnv  convolve  debug  nidfft  nidstft  op  s1  s2  s4  scope_8b.csv  st  wavegen
include/: ColumnRead.c  ColumnRead.h  ColumnRead.h~  Windows.c  Windows.h  Windows.h~
lib/: CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~
src/: #nidstft.c#  .#nidstft.c  CMakeLists.txt  ColumnRead.c  ColumnRead.c~  Makefile  convolve.c  convolve.c~  debug  err  nidfft.c  nidfft.c~  nidharmonics.c  nidharmonics.c~  nidpoincare.c  nidpoincare.c~  nidstft.c  nidstft.c~  wavegen.c  wavegen.c~
